--- a/package.json
+++ b/package.json
@@ -1,28 +1,19 @@
 {
-	"name": "sea-battle",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"dev": "nodemon server.js",
-		"start": "node server.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/s0loparty/sea-battle.git"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/s0loparty/sea-battle/issues"
-	},
-	"homepage": "https://github.com/s0loparty/sea-battle#readme",
-	"dependencies": {
-		"express": "^4.17.2",
-		"socket.io": "^4.4.1"
-	},
-	"devDependencies": {
-		"nodemon": "^2.0.15"
-	}
+  "name": "websockets-socket.io",
+  "version": "1.0.0",
+  "engines": {
+    "node": "12.x"
+  },
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "socket.io": "^2.3.0"
+  }
 }
