--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+	  "dev": "nodemon server.js",
     "start": "node server.js"
   },
   "keywords": [],
@@ -15,5 +16,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
